info box alignment issue fixed, icrease size of title

--- a/capstone-project/capstone-project-client/src/Styles/Shading.css
+++ b/capstone-project/capstone-project-client/src/Styles/Shading.css
@@ -2,7 +2,8 @@
 #homeSearchBar,
 #homeCarouselBody,
 #form,
-#card
+#card,
+#button
  {
     box-shadow: 5px 5px 10px 0px rgba(0, 0, 0, 0.5);
 }
